// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxListGroup customize 1`] = `
<div>
  <h3
    class="list-group list-group-flush list-group-horizontal-xlarge bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`CxListGroup example 1`] = `
<div>
  <ul
    class="list-group"
  >
    <li
      class="list-item"
    >
      A
    </li>
    <li
      class="list-item"
    >
      B
    </li>
    <li
      class="list-item"
    >
      C
    </li>
  </ul>
</div>
`;

exports[`loads and displays CxListGroup component 1`] = `
<div>
  <ul
    class="list-group"
  >
    Test
  </ul>
</div>
`;
